# Copyright © 2020-2022 The Smelling Salts Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "smelling_salts"
version = "0.7.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "Abstraction over OS APIs to handle asynchronous device waking"
repository = "https://github.com/ardaku/smelling_salts"
documentation = "https://docs.rs/smelling_salts"
homepage = "https://github.com/ardaku/smelling_salts/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "asynchronous",
    "rust-patterns",
    "api-bindings",
    "hardware-support",
    "os",
]
keywords = ["futures", "platform-agnostic", "cross-platform", "io", "waker"]
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[dependencies.pasts]
version = "0.12"

[dependencies.whisk]
version = "0.7"
features = ["pasts"]

[features]
# Modern Linux file descriptors
epoll = []
# BSD/MacOS file descriptors
kqueue = []
# MacOS runloop
runloop = []

[[example]]
name = "pipe"
path = "examples/pipe.rs"
required-features = ["epoll"]

[[example]]
name = "sleep"
path = "examples/sleep.rs"
required-features = ["epoll"]
