# Copyright © 2020-2023 The Smelling Salts Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "smelling_salts"
version = "0.10.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Abstraction over OS APIs to handle asynchronous device waking"
repository = "https://github.com/ardaku/smelling_salts"
documentation = "https://docs.rs/smelling_salts"
homepage = "https://github.com/ardaku/smelling_salts/blob/stable/CHANGELOG.md"
include = ["README.md", "src/*", "examples/*"]
categories = [
    "asynchronous",
    "rust-patterns",
    "api-bindings",
    "hardware-support",
    "os",
]
keywords = ["futures", "platform-agnostic", "cross-platform", "io", "waker"]
readme = "README.md"
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true

[dependencies.pasts]
version = "0.13"

[dependencies.whisk]
version = "0.10"
features = ["pasts"]

[dev-dependencies.async_main]
version = "0.2"
features = ["pasts"]

[features]
default = []

example-platform-linux = []

[[example]]
name = "stdin"
required-features = ["example-platform-linux"]

[[example]]
name = "pipe"
required-features = ["example-platform-linux"]

[[example]]
name = "sleep"
required-features = ["example-platform-linux"]
